# wfANOVApy

./: .buildinfo  README.md  api.html  genindex.html  index.html  index.rst  install.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  install.doctree  usage.doctree
.github/workflows/: documentation.yml
_sources/: api.md.txt
docs/: conf.py  index.rst  install.md  requirements.txt  usage.md
docs/_build/: .buildinfo  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js  usage.html
docs/_build/.doctrees/: environment.pickle  index.doctree  install.doctree  usage.doctree
docs/_build/_sources/: install.md.txt
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/source/: conf.py  index.rst  install.md  usage.md
wfANOVA/: __init__.py  _wavetools.py  wavestats.py  wfanova.py
wfANOVA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
wfANOVA/data/: wfANOVAdemo.m
wfANOVAdemo/: wfANOVAdata.mat  wfANOVAdemo.m
wfANOVApy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
