[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wfANOVA"]

[project]
requires-python = ">=3.9"
name = "wfANOVA"
version = "0.1.0"
description = "TEST"
authors = [{name = "Siddharth Nathella", email = "snathella@gatech.edu"}]
maintainers = [{name = "Siddharth Nathella", email = "snathella@gatech.edu"}]
dependencies = [
    "numpy",
    "scipy",
    "PyWavelets",
    "scikit-learn",
    "matplotlib",
    "pandas"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Private :: Do Not Upload", # Remove this line to upload to PyPI
]


[project.scripts]


[project.urls] # Make sure to update these to your project's URLs
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
